--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <a href="#" class="trigger"><i class="fas fa-plus"></i></a>
       </menu>
       <script src="https://use.fontawesome.com/068c2ec2e7.js"></script>
-      <script src="icon.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
